# user-management

./: .conanrc  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.alt  README.md  changelog.md  conanfile.txt  index.html  readme.md
.github/: dependabot.yml  instructions.md
.github/actions/determine-version/: action.yml
.github/actions/replace-version/: action.yml
.github/actions/setup-conan/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-rtfact-npm/: action.yml
.github/workflows/: ccpp.yml  codeql-analysis.yml  docker-publish.yml  documentation.yml  label-conflicts.yml  node.js.yml  publish.yml  upload.yml
.infra/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  readme.md
api/: openapi.yaml
api/schema/: add.json  edit.json  error.json  user.json  users.json
backend/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  README.md  build-order-to-matrix.py  conanfile.py  conanfile.txt  readme.md  requirements.txt
backend/.conan/: global.conf  remotes.json  remotes.txt  settings.yml  settings_user.yml
backend/.conan/extensions/commands/: cmd_detect_profile.py
backend/.conan/extensions/commands/um/: cmd_detect_profile.py
backend/.conan/extensions/compatibility/: compatibility.py  cpp_compat.py
backend/.conan/extensions/plugins/: profile.py
backend/.conan/profiles/: alpine-3-12  debug  ninja  ubuntu-22
backend/certs/: dh2048.pem
backend/cmake/: clang-format.cmake  clang-tidy.cmake  cmake-format.cmake  conan-setup.cmake  options.cmake  schema-pack.cmake  unit-test-helper.cmake
backend/include/um/: user_management.hpp
backend/src/: CMakeLists.txt  content_type_from_ext.hpp  main.cpp  program.hpp  web_app_handler.cpp
backend/src/database/: CMakeLists.txt  user_list.hpp  users.cpp  users.hpp
backend/src/database/encoders/: CMakeLists.txt  base64.cpp  base64.hpp  sha256.cpp  sha256.hpp
backend/src/database/logging/: CMakeLists.txt  database_logger.hpp
backend/src/encoders/: CMakeLists.txt  base64.cpp  base64.hpp  sha256.cpp  sha256.hpp
backend/src/handlers/: CMakeLists.txt  serve_files.cpp  serve_files.hpp  user_database.cpp  user_database.hpp  user_routes.cpp  user_routes.hpp  web_app.cpp  web_app.hpp  web_app_handler.cpp  web_app_handler.hpp
backend/src/handlers/utility/: CMakeLists.txt  add_headers.cpp  add_headers.hpp  content_type_from_ext.cpp  content_type_from_ext.hpp  response_builder.cpp  response_builder.hpp  routing.hpp
backend/src/logging/: CMakeLists.txt  logger.cpp  logger.hpp
backend/src/utility/: CMakeLists.txt  app_args.cpp  app_args.hpp  content_type_from_ext.cpp  server_logger.hpp
backend/test/: CMakeLists.txt  encoders.cpp  main.cpp  program.cpp  user_database.cpp  user_management.cpp  user_routes.cpp  users.cpp
cmake/: schema-pack.cmake
frontend/: .eslintrc.json  Dockerfile.multistage  jest.setup.js  package.json
frontend/src/components/cards/: Loading.tsx  add.test.tsx
frontend/src/components/decks/: Individuals.tsx
frontend/src/components/operations/: delete.error.test.tsx  delete.test.tsx  edit.error.test.tsx  edit.test.tsx
frontend/src/containers/layout/: layout.scss.d.ts
frontend/src/containers/messages/: Success.tsx  pending.test.tsx
frontend/src/core/services/: List.ts  User.ts  services.test.ts
frontend/webpack/: webpack.prod.js
sample-react-app/: package.json
sample-react-app/src/: App.js  Timer.js
src/: main.cpp  program.hpp
web-app/: .babelrc  .eslintrc.json  .gitignore  .npmignore  Dockerfile  Dockerfile.multistage  LICENSE  README.md  babel.config.js  jest.setup.js  package.json  readme.md  tsconfig.json  webpack.config.js  webpack.config.ts
web-app/build-utils/: webpack.common.js  webpack.dev.js  webpack.prod.js
web-app/public/: index.html
web-app/src/: index.js  index.tsx
web-app/src/components/: App.js  App.tsx  Cards.js  DynamicPage.js  EditModal.js  EditUsers.js  Home.js  Item.js  Layout.js  Module.js  Profile.js  User.js  layout.css  layout.test.js
web-app/src/components/User/: Add.js  Display.js  Edit.js  Loading.js
web-app/src/components/cards/: Add.js  Add.tsx  Display.js  Display.tsx  add.test.js  add.test.tsx  display.test.js  display.test.tsx  loading.test.js  loading.test.tsx
web-app/src/components/decks/: Individuals.js  Placeholders.js  individuals.test.js  individuals.test.tsx  placeholders.test.js  placeholders.test.tsx
web-app/src/components/dialogs/: ConfirmForm.js  EditForm.js  OptionalMessage.js  UserModal.js
web-app/src/components/endpoints/: List.js  User.js  endpoints.test.js  list.test.js
web-app/src/components/forms/: Confirm.js  Confirm.tsx  User.js  User.tsx  confirm.test.js  confirm.test.tsx  user.test.js  user.test.tsx
web-app/src/components/messages/: error.test.js  pending.test.js  select.test.js  success.test.js
web-app/src/components/operations/: Add.js  Add.tsx  Delete.js  Delete.tsx  Edit.js  Edit.tsx  add.error.test.js  add.error.test.tsx  add.test.js  add.test.tsx  delete.error.test.js  delete.error.test.tsx  delete.test.js  delete.test.tsx  edit.error.test.js  edit.error.test.tsx  edit.test.js  edit.test.tsx
web-app/src/components/tools/: Etag.js  etag.test.js
web-app/src/components/user/: Add.js  Delete.js  Edit.js
web-app/src/containers/: PopupModal.js  PopupModal.tsx  popupmodal.test.js  popupmodal.test.tsx
web-app/src/containers/layout/: Layout.tsx  layout.scss  layout.scss.d.ts  layout.test.tsx
web-app/src/containers/messages/: Error.js  Error.tsx  Pending.js  Pending.tsx  Select.js  Select.tsx  Success.js  Warning.js  Warning.tsx  error.test.tsx  pending.test.js  pending.test.tsx  select.test.js  select.test.tsx  success.test.js  success.test.tsx  warning.test.js  warning.test.tsx
web-app/test/: add.user.test.js  delete.user.test.js  edit.user.test.js  error.delete.user.test.js  user.test.js
web-app/webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
web-app/webpack/addons/: webpack.bundleanalyzer.js
web-app/webpack/rules/: styles.js
(+21 files in other folders)
